--- a/app/styles/tv-chapter.styl
+++ b/app/styles/tv-chapter.styl
@@ -1,138 +1,73 @@
-.chapter-inner-wrapper
-	max-width 1200px
-	margin 0 auto
+.metadata-chapter
 	display flex
-	justify-content space-between
-	flex-wrap wrap
-	padding 0 20px
-	.chapter-content
-		max-width 700px
-		h1
-			font-family 'Montserrat'
-			font-size 25px
-			color #202124
-			margin 20px 0
-		.description
-			font-family 'PT Serif'
-			font-size 18px
-			line-height 1.3
-			color black	
-		.users-container
-			.grid-item
-				display inline-block
-				width 230px
+	flex-direction column
+	input,
+	textarea
+		padding 15px 10px
+		font-size 16px
+		border 1px solid #ddd
+		margin-bottom 10px
+		border-radius 5px
+	textarea
+		height 100px
 
-// .contenedor
-// 	width 100%
-// 	display flex
-// 	justify-content center
-// 	&-video
-// 		width 100%
-// 		height 450px
-// .sub-contenedor
-// 	width 100%
-// 	display flex
-// 	justify-content center
-// 		width 50%
-// 		height 450px
-// .description 
-// 	width 100%
-// 	display flex
-// 	padding 15px 0
-// 	justify-content space-around
-// 	align-items baseline
-// 	background-color rgba(0, 0, 0, 0.06)
-// 	&-likes
-// 		width 146px
-// 		align-items space-around
-// 		justify-content space-between
-// 		display flex
-// 		flex-direction column
-// 		&-logos
-// 			display flex
-// 			width 60px
-// 			justify-content space-between
-// 		&-redes
-// 			display flex
-// 			justify-content space-around
-// 	&-likes h3
-// 		font-size 15px
-// 		font-weight bold
-// 		font-family Montserrat
-// 	&-texto
-// 		width 887px
-// 		text-align left
-// 		display flex
-// 		flex-direction column
-// 		justify-content center
-// 		padding 5px 0px
-// 	&-texto h3
-// 		font-family Montserrat
-// 		font-size 26px
-// 		color #000
-// 		margin 0 5px 0
-// 	&-texto p
-// 		font-family sans-serif
-// 		font-size 18px
-// 		color #000
-// 		margin 10px 5px 0
-// 	&-texto span
-// 		font-family sans-serif
-// 		font-size 13px
-// 		color #000
-// .informacion h2
-// 	font-size 27px
-// 	font-family Montserrat
-// 	font-weight bold
-// 	padding 6px 0
-// .informacion
-// 	padding 9px 80px
-// 	&-division
-// 		width 100%
-// 		display flex
-// 		justify-content space-between
-// 		&-texto
-// 			width 720px
-// 			&-imagen
-// 				margin 15px 0
-// 			&-imagen img
-// 				height 353px
-// 				width 100%
-// 		&-texto p
-// 			font-family sans-serif
-// 			padding 8px 0px
-// 		&-texto h2
-// 			font-size 20px !important
-// 		&-baners
-// 			width 240px
-// 			display flex
-// 			flex-direction column
-// 			&-cuadros
-// 				border 1px solid #ececec
-// 				background-color #ececec
-// 				width 240px
-// 				height 350px
-// 				margin 20px 0
-// @media (max-width: 1150px)
-// 	.informacion-division-texto
-// 		width 673px
-// @media (max-width: 1100px)
-// 	.informacion-division-texto
-// 		width 565px
-// 	.informacion-division-texto p
-// 		text-align justify
-// 	.description-likes
-// 		width 251px
-// 		padding 39px
-// 	.description-texto
-// 		width 100%
-// 		padding 25px 27px
-// @media (max-width: 995px)
-// 	.informacion-division
-// 		flex-wrap wrap
-// 	.informacion-division-baners
-// 		width 100%
-// 		flex-direction row
-// 		justify-content space-around
-// 	.informacion-division-texto
-// 		width 100%
+.chapter-banner
+	width 100%
+	height 80px
+	background-size cover
+	margin-bottom 40px
+	
+.chapter-details
+	background-color rgba(0, 0, 0, 0.06)
+	display flex
+	justify-content center
+	padding 20px 0
+	.content
+		padding 0 10px
+		max-width 1180px
+		display flex
+		.info
+			flex-grow 1
+			h1
+				font-family 'Montserrat'
+				font-size 18.3px
+				font-weight bold
+				color #202124
+			p
+				margin-top 5px
+				font-family 'Arial'
+				font-size 14.2px
+				font-weight normal
+				line-height 1.69
+				color #202124
+		.share
+			flex-shrink 0
+			padding 0 20px
+			p
+				font-family 'Montserrat'
+				font-size 12px
+				font-weight normal
+				letter-spacing 0.5px
+				color #000000
+		.social
+			margin-top 5px
+			display flex
+			.share-fb,
+			.share-tw
+				width 40px
+				height 40px
+				border-radius 50%
+				display flex
+				justify-content center
+				align-items center
+				font-size 20px
+				color white
+				i
+					margin-top 3px
+					margin-left 7px
+			.share-fb
+				background-color #33599d
+			.share-tw
+				margin-left 10px
+				background-color #4daaf7
+		
