--- a/app/views/tv/index.html
+++ b/app/views/tv/index.html
@@ -16,7 +16,7 @@
 <div class="tv-intro">
 	<div class="video">
 		<video autoplay loop muted>
-		  <source src="intro.mp4" type="video/mp4">
+		  <source src="http://res.cloudinary.com/arte-manifiesto/video/upload/v1468860976/tv/intro.mp4" type="video/mp4">
 		</video>
 		<div class="info-container">
 			<header>
