--- a/app/styles/tv.styl
+++ b/app/styles/tv.styl
@@ -3,14 +3,13 @@
 	height calc(100vh - 64px)
 	overflow hidden
 	position relative
-
-.video
-	position absolute
-	top -20px
-	left 0
-	right 0
 	video
-		width 100%
+		position absolute
+		min-width 100%
+		min-height 100%
+		top 50%
+		left 50%
+		transform translate(-50%, -50%)
 	.info-container
 		position absolute
 		top 0
@@ -49,8 +48,8 @@
 			align-items center
 			position absolute
 			left 50%
-			transform translateX(-50%)
-			bottom 100px
+			top 50%
+			transform translate(-50%, -50%)
 			h1
 				font-family 'Montserrat'
 				font-size 48px
