cchange message for comments

--- a/app/views/tv/index.html
+++ b/app/views/tv/index.html
@@ -19,7 +19,7 @@
 	</video>
 	<div class="info-container">
 		<header>
-			<h1>am tv</h1>
+			<a href="/tv"><h1>am tv</h1></a>
 		</header>
 		<div class="info">
 			<h1>Que el arte inunde tu vida</h1>
@@ -33,6 +33,7 @@
 
 <div class="latest-chapters">
 <h3>Últimos capítulos</h3>
+<div></div>
 </div>
 
 
