--- a/app/styles/tv.styl
+++ b/app/styles/tv.styl
@@ -61,18 +61,14 @@
 				color white
 				margin-bottom 15px
 			p
-				width 469.3px
 				max-width 450px
-				opacity 0.7
 				font-family 'PT Serif'
 				font-size 20px
 				line-height 1.3
 				text-align center
-				color #ffffff
+				color white
 				font-weight normal
-				text-shadow 0 2px 4px rgba(0, 0, 0, 0.5)
 				margin-bottom 20px
-				
 			a
 				padding 10px 20px
 				color white
@@ -94,8 +90,7 @@
 	max-width 1180px
 	margin 0 auto
 	margin-top 30px
-	padding 10px 20px
-	
+	padding 0 20px
 	h3
 		font-family 'Montserrat'
 		font-size 25px
@@ -103,15 +98,16 @@
 		padding-bottom 10px
 		border-bottom 1px solid rgba(32,33,36, 0.2)
 	div
-		width 30px
+		width 50px
 		height 3px
 		background-color blue
 
 .chapters-container
 	max-width 1180px
-	margin 0 auto
-	margin-top 30px
+	margin 30px auto
 	padding 0 10px
+	
+				
 	.chapter
 		display flex
 		margin-bottom 20px
@@ -126,7 +122,10 @@
 			top 0
 			bottom 0
 			position absolute
+			.circle:hover
+				transform translate(0,0) scale(1)
 			.circle
+				transition all 0.5s ease-in-out
 				position absolute
 				top 50%
 				left 50%
