calendar for birthday

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -11,6 +11,8 @@ body
 *------------------------------------*/
 @import 'reset.styl'
 
+@import 'datepicker.styl'
+
 /*------------------------------------*
 	$ GRID
 *------------------------------------*/
@@ -55,6 +57,10 @@ white = #fff
 @import 'tv-chapter.styl'
 
 @import 'tv.styl'
+
+*:focus {
+    outline: none;
+}
 
 /*------------------------------------*
 	$ LOADING
