discover work shows by defaults the latest featured works

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -137,11 +137,11 @@ mixpanel.init("74985840e393343761c1e55c835a01e4");
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="/works/category/all/page-1">OBRAS</a></td>
+					<td><a href="/works/category/all/page-1/?order=newest&featured=1">OBRAS</a></td>
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="/users/specialty/all/page-1">ARTISTAS</a></td>
+					<td><a href="/users/specialty/all/page-1/?order=newest&featured=1">ARTISTAS</a></td>
 				</tr>
 				<tr>
 					<td></td>
