--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -117,7 +117,7 @@
 					<p class="am-NavigationMenu-description-text">Conoce las obras más populares de este 2016</p>
 				</div>
 			</a>
-			<a href="/users/specialty/all/page-1" class="grid-33 grid-parent am-NavigationMenu-section">
+			<a href="/users/specialty/all/page-1/?order=newest&featured=1" class="grid-33 grid-parent am-NavigationMenu-section">
 				<div class="grid-50 mobile-grid-50">
 					<figure class="am-NavigationMenu-section-image" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_200,h_200,c_fill/general/navigation-image2.jpg'); background-position: 50% 75%;"></figure>
 				</div>
