change art feed menu item by home

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -124,7 +124,7 @@ mixpanel.init("74985840e393343761c1e55c835a01e4");
 			{% if user %}
 				<tr>
 					<td></td>
-					<td><a href="/feed">ART FEED</a></td>
+					<td><a href="/feed">INICIO</a></td>
 				</tr>
 				<tr>
 					<td></td>
