--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -30,7 +30,7 @@
 					<div class="am-Header-new-right">
 							<ul class="options">
 				              {% if user %}
-				                <a href="/feed" class="feed-menu">ART FEED<span></span></a>
+				                <a href="/feed" class="feed-menu">INICIO<span></span></a>
 				              {% endif %}
 				              	<a href="/tv" class="market-menu">TV<span></span></a>
 								<a class="works-menu js-menu-discover">DESCUBRE<span></span></a>
