--- a/app/views/partials/elements/table-work-item.html
+++ b/app/views/partials/elements/table-work-item.html
@@ -7,15 +7,7 @@
     <td><%=views%></td>
     <td><% if(public) { %> si <% } else { %> no <% } %></td>
     <td><% if(onSale) { %> si <% } else { %> no <% } %></td>
-    <td><%
-        var d = new Date(createdAt),
-            fragments = [
-                d.getMonth() + 1,
-                d.getDate(),
-                d.getFullYear()
-            ];
-            print(fragments.join('-'));
-        %></td>
+    <td><%=dateToString(createdAt)%></td>
     <td><a target='_blank' href="/user/<%=User.username%>/work/<%=nameSlugify%>/edit" class="btn btn-success">editar</a></td>
     <% if(featured) { %>
       <td><a class="btn featured-btn btn-primary">AM</a></td>
