--- a/app/styles/tv-chapter.styl
+++ b/app/styles/tv-chapter.styl
@@ -11,6 +11,22 @@
 	textarea
 		height 100px
 
+.chapter-header
+	position relative
+	max-width 1180px
+	display flex
+	margin 0 auto
+	padding 0 20px
+	h1
+		position absolute
+		top 30px
+		opacity 0.7
+		font-family 'Montserrat'
+		font-size 48px
+		line-height 1.2
+		font-weight bold
+		letter-spacing -1.8px
+		color white
 .chapter-banner
 	display none
 	width 100%
@@ -71,4 +87,14 @@
 			.share-tw
 				margin-left 10px
 				background-color #4daaf7
+				
+@media (max-width: 768px)
+	.chapter-details
+		.content
+			flex-direction column
+			.info
+				margin-bottom 10px
+			.share
+				padding 0
+
 		
