--- a/app/styles/tv.styl
+++ b/app/styles/tv.styl
@@ -158,3 +158,13 @@
 					margin-bottom 3px
 				p:last-child
 					font-size 28px
+					
+@media (max-width: 768px)
+	.tv-intro
+		.info-container
+			.info
+				width 90%
+				h1
+					font-size 36px
+				p
+					font-size 18px
