--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -63,6 +63,9 @@
 		<div class="grid-100">
 			<div class="single-info">
 				<div class="single-image">
+					<div class="vertical-ad" style="margin-right: 70px;">
+						<img src="https://scontent.fgru3-2.fna.fbcdn.net/v/t1.0-9/13754660_1044543032310710_2322361708876425070_n.png?oh=57173afc1743cbeb2f5ac839b3614fe2&oe=5832C075" alt="">
+					</div>
 					<div class="single-image-inner">
 						<div class="work-photo-container">
 							<img src="{{work.photo|addFilter('w_700,h_800,q_80,c_limit')}}" class="work-photo" id="work-image">
