enable following in users card

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -109,7 +109,7 @@
 			<p class="profile-title">Sobre el artista</p>
 			<p class="profile-desc">{{profile.biography}}</p>
 			<div class="profile-desc u-margin-top-20">
-				{% if profile.facebook %} <a href="{{profile.facebook}}"><i class="fa fa-facebook"></i></a> {% endif %}
+				{% if profile.facebook %} <a href="{{profile.facebook}}" target="_blank"><i class="fa fa-facebook"></i></a> {% endif %}
 				{% if profile.twitter %} <a href="{{profile.twitter}}"><i class="fa fa-twitter"></i></a> {% endif %}
 				{% if profile.behance %} <a href="{{profile.behance}}"><i class="fa fa-behance"></i></a> {% endif %}
 				{% if profile.tumblr %} <a href="{{profile.tumblr}}"><i class="fa fa-tumblr"></i></a> {% endif %}
