render ig and dribbble icons in profile

--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -197,10 +197,6 @@
 										<input class="input" name='facebook' value="{{profile.facebook}}" type="text" placeholder="Ingresa tu link de tu página en facebook"/>
 									</div>
 									<div class="social">
-										<i class="fa fa-twitter"></i>
-										<input class="input" name='twitter' value="{{profile.twitter}}" type="text" placeholder="Ingresa tu link del perfil en twitter"/>
-									</div>
-									<div class="social">
 										<i class="fa fa-instagram"></i>
 										<input class="input" name='instagram' value="{{profile.instagram}}" type="text" placeholder="Ingresa tu link del perfil en instagram"/>
 									</div>
@@ -209,20 +205,16 @@
 										<input class="input" name='behance' value="{{profile.behance}}" type="text" placeholder="Ingresa tu link del perfil en behance"/>
 									</div>
 									<div class="social">
+										<i class="fa fa-dribbble"></i>
+										<input class="input" name='dribbble' value="{{profile.dribbble}}" type="text" placeholder="Ingresa tu link del perfil en dribbble"/>
+									</div>
+									<div class="social">
+										<i class="fa fa-twitter"></i>
+										<input class="input" name='twitter' value="{{profile.twitter}}" type="text" placeholder="Ingresa tu link del perfil en twitter"/>
+									</div>
+									<div class="social">
 										<i class="fa fa-tumblr"></i>
 										<input class="input" name='tumblr' value="{{profile.tumblr}}" type="text" placeholder="Ingresa tu link del perfil en tumblr"/>
-									</div>
-									<div class="social">
-										<i class="fa fa-wordpress"></i>
-										<input class="input" name='blog' value="{{profile.blog}}" type="text" placeholder="Ingresa tu link de tu blog"/>
-									</div>
-									<div class="social">
-										<i class="fa fa-vimeo"></i>
-										<input class="input" name='vimeo' value="{{profile.vimeo}}" type="text" placeholder="Ingresa tu link del perfil en vimeo"/>
-									</div>
-									<div class="social">
-										<i class="fa fa-dribbble"></i>
-										<input class="input" name='dribble' value="{{profile.dribble}}" type="text" placeholder="Ingresa tu link del perfil en dribble"/>
 									</div>
 								</div>
 							</div>
