--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -109,19 +109,9 @@
 							<p class="title">País</p>
 							<select class="input select" name='country'>
 								<option disabled selected>Elige tu pais</option>
-								<option>Argentina</option>
-								<option>Bolivia</option>
-								<option>Brasil</option>
-								<option>Chile</option>
-								<option>Colombia</option>
-								<option>Ecuador</option>
-								<option>España</option>
-								<option>Estados Unidos</option>
-								<option>Mexico</option>
-								<option>Paraguay</option>
-								<option>Peru</option>
-								<option>Uruguay</option>
-								<option>Venezuela</option>
+								{% for country in countries %}
+									<option value="{{country.name}}">{{country.name}}</option>
+								{% endfor %}
 							</select>
 						</div>
 						<div class="grid-50 mobile-grid-100">
