search box by users

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -14,15 +14,15 @@
 						<div class="search">
 	            <form class="search-box">
 	  						<div class="am-Search-input2">
-	  							<input type="text" class='search-box-value general-search' placeholder="Buscar"/>
+	  							<input type="text" class='search-box-value general-search' placeholder="Busca artistas"/>
 	  							<i class="bi_interface-search search-btn search-general-btn"></i>
 	  						</div>
-	  						<ul class="search-options hide general-search-options">
+	  						<!-- <ul class="search-options hide general-search-options">
 	  							<li class="search-option"><a>Buscar en obras <strong class="works-option"></strong></a></li>
 	  							<li class="search-option"><a>Buscar en artistas <strong class="users-option"></strong></a></li>
 	                <li class="search-option"><a>Buscar en colecciones <strong class="collections-option"></strong></a></li>
 	                <li class="search-option"><a>Buscar en productos <strong class="products-option"></strong></a></li>
-	  						</ul>
+	  						</ul> -->
 	            </form>
 						</div>
 					</div>
