--- a/app/views/tv/index.html
+++ b/app/views/tv/index.html
@@ -17,7 +17,7 @@
 
 <div class="tv-intro">
 	<video autoplay loop muted>
-	  <source src="http://res.cloudinary.com/arte-manifiesto/video/upload/v1468860976/tv/intro.mp4" type="video/mp4">
+	  <source src="http://res.cloudinary.com/arte-manifiesto/video/upload/w_1000,c_limit,q_70,ac_none/v1468860976/tv/intro.mp4" type="video/mp4">
 	</video>
 	<div class="info-container">
 		<header>
