social network buttons in a different page

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -122,13 +122,13 @@
 
 				{% if profile.instagram %} <a href="{{profile.instagram}}" target="_blank"><i class="fa fa-instagram"></i></a> {% endif %}
 
-				{% if profile.twitter %} <a href="{{profile.twitter}}"><i class="fa fa-twitter"></i></a> {% endif %}
+				{% if profile.twitter %} <a href="{{profile.twitter}}" target="_blank"><i class="fa fa-twitter"></i></a> {% endif %}
 				
-				{% if profile.behance %} <a href="{{profile.behance}}"><i class="fa fa-behance"></i></a> {% endif %}
-				{% if profile.tumblr %} <a href="{{profile.tumblr}}"><i class="fa fa-tumblr"></i></a> {% endif %}
-				{% if profile.wordpress %} <a href="{{profile.wordpress}}"><i class="fa fa-wordpress"></i></a> {% endif %}
-				{% if profile.vimeo %} <a href="{{profile.vimeo}}"><i class="fa fa-vimeo"></i></a> {% endif %}
-				{% if profile.dribbble %} <a href="{{profile.dribbble}}"><i class="fa fa-dribbble"></i></a> {% endif %}
+				{% if profile.behance %} <a href="{{profile.behance}}" target="_blank"><i class="fa fa-behance"></i></a> {% endif %}
+				{% if profile.tumblr %} <a href="{{profile.tumblr}}" target="_blank"><i class="fa fa-tumblr"></i></a> {% endif %}
+				{% if profile.wordpress %} <a href="{{profile.wordpress}}" target="_blank"><i class="fa fa-wordpress"></i></a> {% endif %}
+				{% if profile.vimeo %} <a href="{{profile.vimeo}}" target="_blank"><i class="fa fa-vimeo"></i></a> {% endif %}
+				{% if profile.dribbble %} <a href="{{profile.dribbble}}" target="_blank"><i class="fa fa-dribbble"></i></a> {% endif %}
 			</div>
 		</div>
 		<div class="grid-40 u-margin-top-20">
