--- a/app/views/partials/elements/work.html
+++ b/app/views/partials/elements/work.html
@@ -22,8 +22,8 @@
           <div class="u-separator"></div>
           <a href="/user/<%=User.username%>/work/<%=nameSlugify%>/edit">Editar</a>
           <div class="u-separator"></div>
-          <a href="/user/<%=User.username%>/work/<%=nameSlugify%>/sell">Vender</a>
-          <div class="u-separator"></div>
+          <!-- <a href="/user/<%=User.username%>/work/<%=nameSlugify%>/sell">Vender</a> -->
+          <!-- <div class="u-separator"></div> -->
           <a class="delete-new" href="#">Borrar</a>
         </div>
       </div>
