--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -35,7 +35,7 @@
 				              	<a href="/tv" class="tv-menu">TV<span></span></a>
 								<a class="works-menu js-menu-discover">DESCUBRE<span></span></a>
 								<!-- <a href="/works/category/all/page-1/?order=newest&featured=1" class="works-menu">OBRAS<span></span></a> -->
-								<a href="/products/category/all/page-1" class="market-menu">TIENDA<span></span></a>
+								<!-- <a href="/products/category/all/page-1" class="market-menu">TIENDA<span></span></a> -->
         				<a href="/blog" class="blog-menu">BLOG<span></span></a>
 							</ul>
 						{% if user %}
