--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -251,10 +251,10 @@
 	        <div class="menu">
 	          <div class="carousel">
 	            <div class="single-tabs">
-	              <div class="single-tab menu-item" data-name='index'>
+	              <!-- <div class="single-tab menu-item" data-name='index'>
 					<p>+ PRODUCTOS</p>
 	                <i class="bi_ecommerce-market"></i>
-	              </div>
+	              </div> -->
 	              <div class="single-tab menu-item" data-name='works'>
 					<p>+ OBRAS</p>
 	                <i class="bi_misc-cube"></i>
