remove target blank in navigation

--- a/app/views/partials/elements/collection.html
+++ b/app/views/partials/elements/collection.html
@@ -12,7 +12,7 @@
             <div class="featured">DESTACADO</div>
           <% } %>
         <% } %>
-        <a href='/user/<%=User.username%>/collection/<%=nameSlugify%>' target="_blank">
+        <a href='/user/<%=User.username%>/collection/<%=nameSlugify%>'>
           <div class="collection-card-stats">
             <p><%=name%></p>
           </div>
