--- a/app/views/partials/elements/feed-work-created.html
+++ b/app/views/partials/elements/feed-work-created.html
@@ -1,7 +1,7 @@
 <script type="text/template" id="template-feed-work-created">
   <div class="feed-card u-margin-top-40">
     <header class="feed-card-header">
-      <a href="/user/<%=User.username%>" class="user" target="_blank">
+      <a href="/user/<%=User.username%>" class="user" >
         <img src="<%= User.photo %>">&nbsp;&nbsp;&nbsp;
         <div>
           <p class="uppercase">
@@ -29,12 +29,12 @@
       </div>
     </header>
 
-    <a href="/user/<%=element.User.username%>/work/<%=element.nameSlugify%>" target="_blank">
+    <a href="/user/<%=element.User.username%>/work/<%=element.nameSlugify%>" >
         <img class="feed-card-image" src="<%= addFilter(element.photo, 'w_540,h_500,c_fill') %>">
     </a>
 
     <section class="feed-card-info">
-      <a href="/user/<%= element.User.username %>" class="info" target="_blank">
+      <a href="/user/<%= element.User.username %>" class="info" >
         <p class="title uppercase"><%= element.name %></p>
         <div class="avatar u-margin-top-10">
           <img src="<%= element.User.photo %>">&nbsp;&nbsp;&nbsp;
@@ -84,7 +84,7 @@
     <footer class="feed-card-footer">
       <% _.each([0,1,2], function(i) { %>
         <% if(element.friends[i] && element.friends[i].photo) { %>
-          <a href="/user/<%= element.friends[i].username %>" target="_blank">
+          <a href="/user/<%= element.friends[i].username %>" >
             <img src="<%= element.friends[i].photo %>"></img>
           </a>
         <% } %>
@@ -97,7 +97,7 @@
           <p> valoraron esta obra</p>
         <% } else { %>
           <% if(element.likes === 1 && element.liked) { %>
-            <a href="/user/<%= viewer.username %>" target="_blank">
+            <a href="/user/<%= viewer.username %>" >
               <img src="<%= viewer.photo %>"></img>
             </a> &nbsp;&nbsp;
             <p> valoraste esta obra</p>
